# derive-crud

./: .gitignore  Cargo.toml  README.md  devenv.nix
.github/workflows/: cd.yaml  ci.yaml
lib/crud-core/: Cargo.toml
lib/crud-core/src/: error.rs
lib/crud-macro/: Cargo.toml
lib/crud-macro-core/: Cargo.toml
lib/crud-macro-core/src/: lib.rs
lib/crud-macro/src/: lib.rs
lib/crud-test/: Cargo.toml
lib/crud-test-core/: Cargo.toml
lib/crud-test-core/src/: lib.rs
lib/crud-test-macro/: Cargo.toml
lib/crud-test-macro/src/: lib.rs
lib/crud-test/src/: lib.rs
src/: lib.rs
tests/: run.rs
tests/create/attribute_id_multiple/: test.rs  test.stderr
tests/create/attribute_id_none/: test.rs  test.stderr
tests/create/attribute_table_multiple/: test.rs  test.stderr
tests/create/attribute_table_no_name/: test.rs  test.stderr
tests/create/attribute_table_none/: test.rs  test.stderr
tests/create/attribute_table_nonexistant/: test.rs  test.stderr
tests/create/bad_schema/: test.rs  test.stderr
tests/create/expected/: test.rs
tests/create/pass/: test.rs
tests/delete/attribute_id_multiple/: test.rs  test.stderr
tests/delete/attribute_id_none/: test.rs  test.stderr
tests/delete/attribute_table_multiple/: test.rs  test.stderr
tests/delete/attribute_table_no_name/: test.rs  test.stderr
tests/delete/attribute_table_none/: test.rs  test.stderr
tests/delete/attribute_table_nonexistant/: test.rs  test.stderr
tests/delete/bad_schema/: test.rs
tests/delete/expected/: test.rs
tests/read/attribute_id_multiple/: test.rs  test.stderr
tests/read/attribute_id_none/: test.rs  test.stderr
tests/read/attribute_table_multiple/: test.rs  test.stderr
tests/read/attribute_table_no_name/: test.rs  test.stderr
tests/read/attribute_table_none/: test.rs  test.stderr
tests/read/attribute_table_nonexistant/: test.rs  test.stderr
tests/read/bad_schema/: test.rs  test.stderr
tests/read/expected/: test.rs
tests/read_all/attribute_id_multiple/: test.rs
tests/read_all/attribute_id_one/: test.rs
tests/read_all/attribute_table_multiple/: test.rs  test.stderr
tests/read_all/attribute_table_no_name/: test.rs  test.stderr
tests/read_all/attribute_table_none/: test.rs  test.stderr
tests/read_all/attribute_table_nonexistant/: test.rs  test.stderr
tests/read_all/bad_schema/: test.rs  test.stderr
tests/read_all/expected/: test.rs
tests/update/attribute_id_multiple/: test.rs  test.stderr
tests/update/attribute_id_none/: test.rs  test.stderr
tests/update/attribute_table_multiple/: test.rs  test.stderr
tests/update/attribute_table_no_name/: test.rs  test.stderr
tests/update/attribute_table_none/: test.rs  (+1 more)
(+5 files in other folders)
