[package]
name = "crud-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
crud-core = { workspace = true }
crud-macro-core = { workspace = true }
async-stream = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
