[package]
name = "crud-macro"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
crud-core = { workspace = true }
crud-macro-core = { workspace = true }
async-stream = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
